# timeSyncWord

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: build.yml
electron/: main.js  preload.js
public/: index.html
public/css/: style.css
public/js/: app.js
scripts/: generate-ssl.sh
server/: config.js  index.js  signaling.js  time-service.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  ntp.rs
