[package]
name = "opentimesync"
version = "2.0.67"
edition = "2021"

[lib]
name = "opentimesync_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = { version = "2", default-features = false, features = ["native-tls", "zip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
